# 1-Basic-Neural-Network-Implementation

./: LICENSE  LLM_chatbot_Roadmap.md  README.md  TODO, LLM chatbot.txt
1-Initialize-the-Network/: Code_Structure.md  README.md  pyproject.toml
1-Initialize-the-Network/1_initialize_the_network/: Neuron.py
1-Initialize-the-Network/init_the_network/: Layer.py  Network.py  Neuron.py
1-Initialize-the-Network/tests/: test_Layer.py  test_Network.py  test_Network.training_with_mock_data.py  test_Neuron.py
